--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,13 @@
     <artifactId>rest-assured-common</artifactId>
     <version>2.9.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
+<dependency>
+    <groupId>org.skyscreamer</groupId>
+    <artifactId>jsonassert</artifactId>
+    <version>1.5.0</version>
+    <scope>test</scope>
+</dependency>
 
   </dependencies>
 
