--- a/Environment_URI.properties
+++ b/Environment_URI.properties
@@ -2,3 +2,5 @@ baseURL:http://localhost:3000
 endPointURI1:Simple_Json
 endPointURI2:ComplexJson
 endPointURI3:Json_Array
+dumyAPIBase:http://dummy.restapiexample.com/
+dummyPost:create
