--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
     <artifactId>json-path</artifactId>
     <version>4.0.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+<dependency>
+    <groupId>log4j</groupId>
+    <artifactId>log4j</artifactId>
+    <version>1.2.17</version>
+</dependency>
    <!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
 <dependency>
     <groupId>io.rest-assured</groupId>
