--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
     <artifactId>log4j</artifactId>
     <version>1.2.17</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>4.0.0</version>
+</dependency>
    <!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
 <dependency>
     <groupId>io.rest-assured</groupId>
