--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
     <artifactId>log4j</artifactId>
     <version>1.2.17</version>
 </dependency>
+<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.6</version>
+</dependency>
 <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
     <groupId>com.aventstack</groupId>
