--- a/src/main/java/com/API_Testing/EnvironmentFiles/Environment_URI.properties
+++ b/src/main/java/com/API_Testing/EnvironmentFiles/Environment_URI.properties
@@ -1,9 +1,8 @@
-baseURL:http://localhost:3000
-endPointURI1:Simple_Json
-endPointURI2:ComplexJson
-endPointURI3:Json_Array
-dumyAPIBase:http://dummy.restapiexample.com/
-dummyPost:create
-
+baseURL:https://dummy.restapiexample.com/
+#EndURL
+create:/create
+update:/update
+delete:/delete
+get:employee
 
 
