Remove duplicate dependency from pom and refector the code

--- a/src/main/java/com/API_Testing/EnvironmentFiles/Environment_URI.properties
+++ b/src/main/java/com/API_Testing/EnvironmentFiles/Environment_URI.properties
@@ -1,8 +1,8 @@
-baseURL:https://dummy.restapiexample.com/
+baseURL:https://dummy.restapiexample.com
 #EndURL
 create:/create
 update:/update
 delete:/delete
-get:employee
+get:/employee
 
 
