--- a/pom.xml
+++ b/pom.xml
@@ -1,129 +1,75 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>RestAPI_AutomationFramework</groupId>
-  <artifactId>RestAPI_Framework</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
-	
-  <name>RestAPI_Framework</name>
-  <url>http://maven.apache.org</url>
+	<groupId>RestAPI_AutomationFramework</groupId>
+	<artifactId>RestAPI_Framework</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  
-    <dependencies>
-  <!-- https://mvnrepository.com/artifact/org.json.wso2/json -->
+	<name>RestAPI_Framework</name>
+	<url>http://maven.apache.org</url>
 
-   <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
-<dependency>
-    <groupId>io.rest-assured</groupId>
-    <artifactId>rest-assured</artifactId>
-    <version>4.0.0</version>
-    <scope>test</scope>
-</dependency>
-   <!-- https://mvnrepository.com/artifact/io.rest-assured/json-path -->
-<dependency>
-    <groupId>io.rest-assured</groupId>
-    <artifactId>json-path</artifactId>
-    <version>4.0.0</version>
-</dependency>
-<dependency>
-    <groupId>commons-io</groupId>
-    <artifactId>commons-io</artifactId>
-    <version>2.6</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
-<dependency>
-    <groupId>com.aventstack</groupId>
-    <artifactId>extentreports</artifactId>
-    <version>4.0.0</version>
-</dependency>
-   <!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
-<dependency>
-    <groupId>io.rest-assured</groupId>
-    <artifactId>json-schema-validator</artifactId>
-    <version>4.0.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.testng/testng -->
-<dependency>
-    <groupId>org.testng</groupId>
-    <artifactId>testng</artifactId>
-    <version>7.8.0</version>
-    <scope>test</scope>
-</dependency>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-<!-- https://mvnrepository.com/artifact/org.json/json -->
-<dependency>
-    <groupId>org.json</groupId>
-    <artifactId>json</artifactId>
-    <version>20090211</version>
-</dependency>
-<dependency>
-   <groupId>javax</groupId>
-   <artifactId>javaee-api</artifactId>
-   <version>7.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.github.scribejava/scribejava-apis -->
-<dependency>
-    <groupId>com.github.scribejava</groupId>
-    <artifactId>scribejava-apis</artifactId>
-    <version>6.6.3</version>
-</dependency>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>5.4.0</version>
+			<scope>test</scope>
+		</dependency>
 
-<!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
-<dependency>
-    <groupId>com.googlecode.json-simple</groupId>
-    <artifactId>json-simple</artifactId>
-    <version>1.1</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.scribe/scribe -->
-<dependency>
-    <groupId>org.scribe</groupId>
-    <artifactId>scribe</artifactId>
-    <version>1.3.7</version>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-path -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>json-path</artifactId>
+			<version>5.4.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>4.0.0</version>
+		</dependency>
+		<!--
+		https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>json-schema-validator</artifactId>
+			<version>5.4.0</version>
+		</dependency>
 
-<!-- https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured -->
-<dependency>
-    <groupId>com.jayway.restassured</groupId>
-    <artifactId>rest-assured</artifactId>
-    <version>2.9.0</version>
-    <scope>test</scope>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.jayway.restassured/json-path -->
-<dependency>
-    <groupId>com.jayway.restassured</groupId>
-    <artifactId>json-path</artifactId>
-    <version>2.9.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.jayway.restassured/json-schema-validator -->
-<dependency>
-    <groupId>com.jayway.restassured</groupId>
-    <artifactId>json-schema-validator</artifactId>
-    <version>2.9.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.jayway.restassured/xml-path -->
-<dependency>
-    <groupId>com.jayway.restassured</groupId>
-    <artifactId>xml-path</artifactId>
-    <version>2.9.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/com.jayway.restassured/rest-assured-common -->
-<dependency>
-    <groupId>com.jayway.restassured</groupId>
-    <artifactId>rest-assured-common</artifactId>
-    <version>2.9.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
-<dependency>
-    <groupId>org.skyscreamer</groupId>
-    <artifactId>jsonassert</artifactId>
-    <version>1.5.0</version>
-    <scope>test</scope>
-</dependency>
-  </dependencies>
+		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.8.0</version>
+			<scope>test</scope>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20231013</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.skyscreamer/jsonassert -->
+		<dependency>
+			<groupId>org.skyscreamer</groupId>
+			<artifactId>jsonassert</artifactId>
+			<version>1.5.0</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 </project>
