--- a/pom.xml
+++ b/pom.xml
@@ -21,24 +21,9 @@
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
 		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
+		<restassuredVersion>${rest-assured.version}</restassuredVersion>
+		<extentVersion>5.0.9</extentVersion>
 
-		<allure-cucumber6-jvm.version>2.13.10</allure-cucumber6-jvm.version>
-		<allure-maven.version>2.10.0</allure-maven.version>
-		<aspectj.version>1.9.4</aspectj.version>
-		<assertj-core.version>3.9.1</assertj-core.version>
-		<awaitility.version>4.1.0</awaitility.version>
-		<cucumber.version>6.11.0</cucumber.version>
-		<hamcrest-library.version>1.3</hamcrest-library.version>
-		<json-path-test.version>4.3.1</json-path-test.version>
-		<json-path.version>2.5.0</json-path.version>
-		<json-smart.version>2.3</json-smart.version>
-		<junit-jupiter.version>5.7.2</junit-jupiter.version>
-		<log4j.version>2.14.1</log4j.version>
-		<rest-assured.version>4.3.1</rest-assured.version>
-		<selenium-chrome-driver.version>3.141.59</selenium-chrome-driver.version>
-		<selenium-java.version>3.141.59</selenium-java.version>
-		<xml-path.version>4.3.1</xml-path.version>
-		<nimbus-jose-jwt.version>9.9.3</nimbus-jose-jwt.version>
 	</properties>
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/net.sf.jxls/jxls-reader -->
@@ -47,16 +32,11 @@
 			<artifactId>jxls-reader</artifactId>
 			<version>1.0.6</version>
 		</dependency>
-		<dependency>
-			<groupId>com.relevantcodes</groupId>
-			<artifactId>extentreports</artifactId>
-			<version>2.41.2</version>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 		<dependency>
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
-			<version>${version}</version>
+			<version>5.0.9</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
@@ -93,11 +73,6 @@
 			<version>1.3.7</version>
 		</dependency>
 
-		<dependency>
-			<groupId>io.qameta.allure</groupId>
-			<artifactId>allure-rest-assured</artifactId>
-			<version>2.17.2</version>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
 			<groupId>org.json</groupId>
@@ -235,31 +210,6 @@
 		</dependency>
 	</dependencies>
 
-	<profiles>
-		<profile>
-			<id>dev</id>
-			<properties>
-				<cucumber.filter.tags>@dev</cucumber.filter.tags>
-				<env>dev</env>
-			</properties>
-		</profile>
-		<profile>
-			<id>int</id>
-			<properties>
-				<cucumber.filter.tags>@int</cucumber.filter.tags>
-				<env>int</env>
-			</properties>
-		</profile>
-		<profile>
-			<id>demo</id>
-			<properties>
-				<cucumber.filter.tags>@demo</cucumber.filter.tags>
-				<env>demo</env>
-			</properties>
-		</profile>
-	</profiles>
-
-
 	<build>
 		<resources>
 			<resource>
@@ -294,33 +244,11 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-				<groupId>io.qameta.allure</groupId>
-				<artifactId>allure-maven</artifactId>
-				<version>${allure-maven.version}</version>
-				<configuration>
-					<reportVersion>2.10.0</reportVersion>
-				</configuration>
-			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
-
-				<configuration>
-
-					<systemProperties>
-						<property>
-							<name>allure.results.directory</name>
-							<value>${project.build.directory}/allure-results</value>
-						</property>
-					</systemProperties>
-					<argLine>
-						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-						-Dcucumber.plugin="io.qameta.allure.cucumber6jvm.AllureCucumber6Jvm"
-					</argLine>
-				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.aspectj</groupId>
