--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
 	<artifactId>RestAPI_Framework</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
 	<name>RestAPI_Framework</name>
 	<url>http://maven.apache.org</url>
 
@@ -21,13 +20,9 @@
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
 		<maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-
-		<allure-cucumber6-jvm.version>2.13.10</allure-cucumber6-jvm.version>
-		<allure-maven.version>2.10.0</allure-maven.version>
 		<aspectj.version>1.9.4</aspectj.version>
 		<assertj-core.version>3.9.1</assertj-core.version>
 		<awaitility.version>4.1.0</awaitility.version>
-		<cucumber.version>6.11.0</cucumber.version>
 		<hamcrest-library.version>1.3</hamcrest-library.version>
 		<json-path-test.version>4.3.1</json-path-test.version>
 		<json-path.version>2.5.0</json-path.version>
@@ -35,18 +30,10 @@
 		<junit-jupiter.version>5.7.2</junit-jupiter.version>
 		<log4j.version>2.14.1</log4j.version>
 		<rest-assured.version>4.3.1</rest-assured.version>
-		<selenium-chrome-driver.version>3.141.59</selenium-chrome-driver.version>
-		<selenium-java.version>3.141.59</selenium-java.version>
 		<xml-path.version>4.3.1</xml-path.version>
 		<nimbus-jose-jwt.version>9.9.3</nimbus-jose-jwt.version>
 	</properties>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/net.sf.jxls/jxls-reader -->
-		<dependency>
-			<groupId>net.sf.jxls</groupId>
-			<artifactId>jxls-reader</artifactId>
-			<version>1.0.6</version>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.testng/testng -->
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -210,32 +197,24 @@
 			<version>2.9.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.11</version>
+		</dependency>
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>7.9.0</version>
+			<scope>compile</scope>
+		</dependency>
+
 	</dependencies>
-
-	<profiles>
-		<profile>
-			<id>dev</id>
-			<properties>
-				<cucumber.filter.tags>@dev</cucumber.filter.tags>
-				<env>dev</env>
-			</properties>
-		</profile>
-		<profile>
-			<id>int</id>
-			<properties>
-				<cucumber.filter.tags>@int</cucumber.filter.tags>
-				<env>int</env>
-			</properties>
-		</profile>
-		<profile>
-			<id>demo</id>
-			<properties>
-				<cucumber.filter.tags>@demo</cucumber.filter.tags>
-				<env>demo</env>
-			</properties>
-		</profile>
-	</profiles>
-
 
 	<build>
 		<resources>
@@ -270,34 +249,11 @@
 					</execution>
 				</executions>
 			</plugin>
-
-			<plugin>
-				<groupId>io.qameta.allure</groupId>
-				<artifactId>allure-maven</artifactId>
-				<version>${allure-maven.version}</version>
-				<configuration>
-					<reportVersion>2.10.0</reportVersion>
-				</configuration>
-			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven-surefire-plugin.version}</version>
 
-				<configuration>
-
-					<systemProperties>
-						<property>
-							<name>allure.results.directory</name>
-							<value>${project.build.directory}/allure-results</value>
-						</property>
-					</systemProperties>
-					<argLine>
-						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-						-Dcucumber.plugin="io.qameta.allure.cucumber6jvm.AllureCucumber6Jvm"
-					</argLine>
-				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.aspectj</groupId>
