Added more tests to understand features and now adding one more project to explore rest-assured features

--- a/src/test/resources/env/testEnv.properties
+++ b/src/test/resources/env/testEnv.properties
@@ -2,7 +2,7 @@ env=testEnv
 base_URL=https://reqres.in
 end_URL=/api/users
 
-# DemoQA Bookstore API Information
+# DemoQA Bookstore API Information https://demoqa.com/swagger/
 
 DQA_USER_NAME=skchaudhary
 DQA_PASSWORD=Ksumit@1989
